fix: fixed scrollbar dealigning scrollable divs in chromium browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,3 +64,10 @@
     scroll-behavior: smooth;
   }
 }
+
+/* this is a css extension that only works in gecko engine based browsers (firefox) */
+@-moz-document url-prefix() {
+  .firefox-scrollbar-margin {
+    padding-right: 4px;
+  }
+}
